# wae_welcome_bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Tiltfile  docker-compose.yaml  pyproject.toml
.github/workflows/: build_push.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
wms_welcome_bot/: __main__.py  __version__.py  main.py
